--- a/CSS-Business-Card/index.html
+++ b/CSS-Business-Card/index.html
@@ -1,11 +1,15 @@
-<html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="styles.css" />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <link rel="stylesheet" href="styles.css">
+        <title>My Business Card</title>
+        <meta charset="UTF-8">
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/brady.jpg">
-            <div >
+            <img class="avatar" src="images/brady.jpg" alt="Braedan Royer onstage with his band, Chase The Bear, at the Wisehall in Vancouver, Canada">
+            <div>
                 <h3>Braedan G. Royer</h3>
                 <p>Front-End Developer</p>
                 <h4>Vancouver, Canada</h4>
